machinekit configs: add in apt-transport-https
nodesource seems to need it

--- a/configs/machinekit-debian-jessie.conf
+++ b/configs/machinekit-debian-jessie.conf
@@ -12,7 +12,7 @@ image_type="machinekit"
 deb_distribution="debian"
 deb_codename="jessie"
 deb_arch="armhf"
-deb_include="ca-certificates dosfstools git-core initramfs-tools linux-base locales \
+deb_include="apt-transport-https ca-certificates dosfstools git-core initramfs-tools linux-base locales \
 lsb-release openssh-server rsync systemd sudo wget"
 #
 deb_exclude=""
