--- a/configs/machinekit-debian-jessie-socfpga.conf
+++ b/configs/machinekit-debian-jessie-socfpga.conf
@@ -75,6 +75,7 @@ repo_external_pkg_list=" \
 chroot_COPY_SETUP_SDCARD="enable"
 chroot_before_hook=""
 chroot_after_hook=""
-chroot_script="machinekit-jessie-socfpga.sh"
+# chroot_script="machinekit-jessie-socfpga.sh"
+chroot_script="machinekit-jessie.sh"
 chroot_post_uenv_txt="post_machinekit.txt"
 chroot_tarball="enable"
