machinekit-debian-jessie.conf: patch in missing libusb

--- a/configs/machinekit-debian-jessie.conf
+++ b/configs/machinekit-debian-jessie.conf
@@ -13,7 +13,7 @@ deb_distribution="debian"
 deb_codename="jessie"
 deb_arch="armhf"
 deb_include="apt-transport-https ca-certificates dosfstools git-core initramfs-tools linux-base locales \
-lsb-release openssh-server rsync systemd sudo wget"
+lsb-release openssh-server rsync systemd sudo wget libusb-1.0-0-dev libncurses5-dev"
 #
 deb_exclude=""
 #
