--- a/configs/machinekit-debian-jessie.conf
+++ b/configs/machinekit-debian-jessie.conf
@@ -22,7 +22,7 @@ deb_mirror=""
 ##
 ##Some packages fail to install via debootstrap: deb_additional_pkgs="<comma|space>"
 ##
-deb_additional_pkgs="nano pastebinit file bsdmainutils i2c-tools fbset hexedit read-edid \
+deb_additional_pkgs="chromium-browser nano pastebinit file bsdmainutils i2c-tools fbset hexedit read-edid \
 acpid cpufrequtils ntpdate ppp usb-modeswitch usbutils apache2 udhcpd avahi-daemon \
 wireless-tools wpasupplicant wvdial lshw hostapd autoconf automake1.11 build-essential \
 bison device-tree-compiler libtool less flex g++ gdb pkg-config vim libc-ares-dev curl \
