--- a/configs/machinekit-debian-jessie-socfpga.conf
+++ b/configs/machinekit-debian-jessie-socfpga.conf
@@ -13,7 +13,7 @@ deb_distribution="debian"
 deb_codename="jessie"
 deb_arch="armhf"
 deb_include="apt-transport-https ca-certificates dosfstools git-core initramfs-tools linux-base locales \
-lsb-release openssh-server rsync systemd sudo wget"
+lsb-release openssh-server rsync systemd sudo wget libusb-1.0-0-dev libncurses5-dev"
 #
 deb_exclude=""
 #
@@ -22,7 +22,7 @@ deb_mirror=""
 ##
 ##Some packages fail to install via debootstrap: deb_additional_pkgs="<comma|space>"
 ##
-deb_additional_pkgs="libusb-1.0-0-dev chromium-browser nano pastebinit file bsdmainutils i2c-tools fbset hexedit read-edid \
+deb_additional_pkgs=" chromium-browser nano pastebinit file bsdmainutils i2c-tools fbset hexedit read-edid \
 acpid cpufrequtils ntpdate ppp usb-modeswitch usbutils apache2 udhcpd avahi-daemon \
 wireless-tools wpasupplicant wvdial lshw hostapd autoconf automake1.11 build-essential \
 bison device-tree-compiler libtool less flex g++ gdb pkg-config vim libc-ares-dev curl \
@@ -31,12 +31,12 @@ xserver-xorg-video-fbdev xserver-xorg x11-xserver-utils xinput lightdm alsa-util
 screen xrdp wicd-gtk wicd-cli wicd-curses libsdl1.2-dev python-pip python-setuptools \
 python2.7-dev python-serial python-smbus ruby ruby-dev libxss1 libnss3 libxslt1.1 libspeechd2 \
 lxde-core leafpad atmel-firmware firmware-ralink firmware-realtek libertas-firmware \
-zd1211-firmware "
+zd1211-firmware libopencv-core-dev libopencv-dev python-opencv bluez nodejs"
 ##
 rfs_username="machinekit"
 rfs_fullname="Kit Ex Machina"
 rfs_password="machinekit"
-rfs_hostname="mksocfpg-oib"
+rfs_hostname="mksocfpga"
 rfs_startup_scripts="enable"
 rfs_opt_scripts="https://github.com/RobertCNelson/boot-scripts"
 rfs_default_desktop="LXDE"
@@ -49,11 +49,11 @@ rfs_ssh_banner="Support/FAQ: http://www.machinekit.io/"
 rfs_ssh_user_pass="enable"
 ##
 ##enable kernel repo: http://repos.rcn-ee.com/(debian|ubuntu)
-#repo_rcnee="enable"
-#repo_rcnee_pkg_list="bb-customizations \
-#rcn-ee-archive-keyring \
-#acpi-support-base  libsoc2 libsoc-dev  \
-#"
+repo_rcnee="enable"
+repo_rcnee_pkg_list="\
+ rcn-ee-archive-keyring  \
+acpi-support-base  libsoc2 libsoc-dev  \
+xinput-calibrator xserver-xorg-video-modesetting"
 
 # drop for now:
 # nodejs nodejs-legacy npm  c9-core-installer
