--- a/configs/machinekit-debian-jessie-socfpga.conf
+++ b/configs/machinekit-debian-jessie-socfpga.conf
@@ -12,8 +12,24 @@ image_type="mksocfpga"
 deb_distribution="debian"
 deb_codename="jessie"
 deb_arch="armhf"
-deb_include="apt-transport-https ca-certificates dosfstools git-core initramfs-tools linux-base locales \
-lsb-release openssh-server rsync systemd sudo wget libusb-1.0-0-dev libncurses5-dev"
+deb_include="	\
+	apt-transport-https	\
+	ca-certificates	\
+	dosfstools	\
+	git-core	\
+	initramfs-tools	\
+	libncurses5-dev	\
+	libusb-1.0-0-dev	\
+	linux-base	\
+	locales	\
+	lsb-release	\
+	openssh-server	\
+	rsync	\
+	sudo	\
+	systemd	\
+	wget	\
+"
+
 #
 deb_exclude=""
 #
@@ -22,16 +38,88 @@ deb_mirror=""
 ##
 ##Some packages fail to install via debootstrap: deb_additional_pkgs="<comma|space>"
 ##
-deb_additional_pkgs=" chromium-browser nano pastebinit file bsdmainutils i2c-tools fbset hexedit read-edid \
-acpid cpufrequtils ntpdate ppp usb-modeswitch usbutils apache2 udhcpd avahi-daemon \
-wireless-tools wpasupplicant wvdial lshw hostapd autoconf automake1.11 build-essential \
-bison device-tree-compiler libtool less flex g++ gdb pkg-config vim libc-ares-dev curl \
-libnss-mdns libssl-dev apache2-utils libxml2-dev tmux xserver-xorg-video-modesetting \
-xserver-xorg-video-fbdev xserver-xorg x11-xserver-utils xinput lightdm alsa-utils evtest \
-screen xrdp wicd-gtk wicd-cli wicd-curses libsdl1.2-dev python-pip python-setuptools \
-python2.7-dev python-serial python-smbus ruby ruby-dev libxss1 libnss3 libxslt1.1 libspeechd2 \
-lxde-core leafpad atmel-firmware firmware-ralink firmware-realtek libertas-firmware \
-zd1211-firmware libopencv-core-dev libopencv-dev python-opencv bluez nodejs"
+deb_additional_pkgs="	\
+	acpid	\
+	alsa-utils	\
+	apache2	\
+	apache2-utils	\
+	atmel-firmware	\
+	autoconf	\
+	automake1.11	\
+	avahi-daemon	\
+	bison	\
+	bluez	\
+	bsdmainutils	\
+	build-essential	\
+	chromium-browser	\
+	cpufrequtils	\
+	curl	\
+	device-tree-compiler	\
+	evtest	\
+	fbset	\
+	file	\
+	firmware-ralink	\
+	firmware-realtek	\
+	flex	\
+	g++	\
+	gdb	\
+	hexedit	\
+	hostapd	\
+	i2c-tools	\
+	leafpad	\
+	less	\
+	libc-ares-dev	\
+	libertas-firmware	\
+	libnss-mdns	\
+	libnss3	\
+	libopencv-core-dev	\
+	libopencv-dev	\
+	libsdl1.2-dev	\
+	libspeechd2	\
+	libssl-dev	\
+	libtool	\
+	libxml2-dev	\
+	libxslt1.1	\
+	libxss1	\
+	lightdm	\
+	lshw	\
+	lxde-core	\
+	nano	\
+	nodejs	\
+	ntpdate	\
+	pastebinit	\
+	pkg-config	\
+	ppp	\
+	python-opencv	\
+	python-pip	\
+	python-serial	\
+	python-setuptools	\
+	python-smbus	\
+	python2.7-dev	\
+	read-edid	\
+	ruby	\
+	ruby-dev	\
+	screen	\
+	tmux	\
+	udhcpd	\
+	usb-modeswitch	\
+	usbutils	\
+	vim	\
+	wicd-cli	\
+	wicd-curses	\
+	wicd-gtk	\
+	wireless-tools	\
+	wpasupplicant	\
+	wvdial	\
+	x11-xserver-utils	\
+	xinput	\
+	xrdp	\
+	xserver-xorg	\
+	xserver-xorg-video-fbdev	\
+	xserver-xorg-video-modesetting	\
+	zd1211-firmware	\
+"
+
 ##
 rfs_username="machinekit"
 rfs_fullname="Kit Ex Machina"
@@ -50,10 +138,15 @@ rfs_ssh_user_pass="enable"
 ##
 ##enable kernel repo: http://repos.rcn-ee.com/(debian|ubuntu)
 repo_rcnee="enable"
-repo_rcnee_pkg_list="\
- rcn-ee-archive-keyring  \
-acpi-support-base  libsoc2 libsoc-dev  \
-xinput-calibrator xserver-xorg-video-modesetting"
+repo_rcnee_pkg_list="	\
+	acpi-support-base	\
+	libsoc-dev	\
+	libsoc2	\
+	rcn-ee-archive-keyring	\
+	xinput-calibrator	\
+	xserver-xorg-video-modesetting	\
+"
+
 
 # drop for now:
 # nodejs nodejs-legacy npm  c9-core-installer
@@ -65,11 +158,15 @@ repo_external_server="http://deb.machinekit.io/debian"
 repo_external_dist="jessie"
 repo_external_components="main"
 repo_external_key="deb.machinekit.io.pubkey.asc"
-repo_external_pkg_list=" \
- linux-image-3.10.37-ltsi-rt37-05841-g81c6be3 \
- linux-headers-3.10.37-ltsi-rt37-05841-g81c6be3  \
- hm2reg-uio-dkms  \
- machinekit machinekit-dev machinekit-rt-preempt"
+repo_external_pkg_list="	\
+	hm2reg-uio-dkms	\
+	linux-headers-3.10.37-ltsi-rt37-05841-g81c6be3	\
+	linux-image-3.10.37-ltsi-rt37-05841-g81c6be3	\
+	machinekit	\
+	machinekit-dev	\
+	machinekit-rt-preempt	\
+"
+
 
 #
 chroot_COPY_SETUP_SDCARD="enable"
