--- a/configs/machinekit-debian-jessie.conf
+++ b/configs/machinekit-debian-jessie.conf
@@ -13,17 +13,89 @@ deb_distribution="debian"
 deb_codename="jessie"
 deb_arch="armhf"
 #
-deb_include="apt-transport-https alsa-utils apache2 autoconf automake avahi-daemon bash-completion \
-bc bison bluetooth build-essential ca-certificates connman cpufrequtils curl \
-dbus-x11 debhelper udhcpd dosfstools fakeroot fbset file firmware-atheros \
-firmware-ralink firmware-realtek firmware-zd1211 flex gdb git-core hdparm \
-hexedit hostapd htop memtester i2c-tools info initramfs-tools iperf iw libnss-mdns \
-libusb-1.0-0-dev libncurses5-dev libtool lightdm linux-base locales lshw lsof \
-lzma lzop openbox openssh-server pkg-config ppp read-edid rfkill \
-rsync ruby ruby-dev screen ssl-cert sudo systemd tightvncserver tmux \
-u-boot-tools usb-modeswitch usbutils v4l-utils vim wget wireless-tools \
-wpasupplicant wvdial xinput xinput-calibrator xorg xserver-xorg-video-fbdev \
-xserver-xorg-video-modesetting zd1211-firmware"
+deb_include="	\
+	alsa-utils	\
+	apache2	\
+	apt-transport-https	\
+	autoconf	\
+	automake	\
+	avahi-daemon	\
+	bash-completion	\
+	bc	\
+	bison	\
+	bluetooth	\
+	build-essential	\
+	ca-certificates	\
+	connman	\
+	cpufrequtils	\
+	curl	\
+	dbus-x11	\
+	debhelper	\
+	dosfstools	\
+	fakeroot	\
+	fbset	\
+	file	\
+	firmware-atheros	\
+	firmware-ralink	\
+	firmware-realtek	\
+	firmware-zd1211	\
+	flex	\
+	gdb	\
+	git-core	\
+	hdparm	\
+	hexedit	\
+	hostapd	\
+	htop	\
+	i2c-tools	\
+	info	\
+	initramfs-tools	\
+	iperf	\
+	iw	\
+	libncurses5-dev	\
+	libnss-mdns	\
+	libtool	\
+	libusb-1.0-0-dev	\
+	lightdm	\
+	linux-base	\
+	locales	\
+	lshw	\
+	lsof	\
+	lzma	\
+	lzop	\
+	memtester	\
+	openbox	\
+	openssh-server	\
+	pkg-config	\
+	ppp	\
+	read-edid	\
+	rfkill	\
+	rsync	\
+	ruby	\
+	ruby-dev	\
+	screen	\
+	ssl-cert	\
+	sudo	\
+	systemd	\
+	tightvncserver	\
+	tmux	\
+	u-boot-tools	\
+	udhcpd	\
+	usb-modeswitch	\
+	usbutils	\
+	v4l-utils	\
+	vim	\
+	wget	\
+	wireless-tools	\
+	wpasupplicant	\
+	wvdial	\
+	xinput	\
+	xinput-calibrator	\
+	xorg	\
+	xserver-xorg-video-fbdev	\
+	xserver-xorg-video-modesetting	\
+	zd1211-firmware	\
+"
+
 #
 deb_exclude=""
 #
@@ -34,17 +106,57 @@ deb_mirror=""
 ##
 #python-2.7: due to: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=769106
 #
-deb_additional_pkgs="bmap-tools libopencv-dev libpython2.7-dev lsb-release nodejs \
-pastebinit pylint python-dbus python-flask python-dev python-minimal python-opencv \
-python-pip vim-nox"
-# Packages that were in BBB Wheezy but not in Jessie
-#deb_additional_pkgs="nano bsdmainutils acpid ntpdate \
-#less g++ libc-ares-dev libssl-dev apache2-utils libxml2-dev \
-#xserver-xorg x11-xserver-utils evtest xrdp wicd-gtk \
-#wicd-cli wicd-curses libsdl1.2-dev python-setuptools \
-#python-serial python-smbus libxss1 libnss3 libxslt1.1 libspeechd2 \
-#atmel-firmware  libertas-firmware libopencv-core-dev bluez"
-##
+deb_additional_pkgs="	\
+	bmap-tools	\
+	libopencv-dev	\
+	libpython2.7-dev	\
+	lsb-release	\
+	nodejs	\
+	pastebinit	\
+	pylint	\
+	python-dbus	\
+	python-dev	\
+	python-flask	\
+	python-minimal	\
+	python-opencv	\
+	python-pip	\
+	vim-nox	\
+"
+
+#Packages that were in BBB Wheezy but not in Jessie
+# deb_additional_pkgs="	\
+# 	acpid	\
+# 	apache2-utils	\
+# 	atmel-firmware	\
+# 	bluez	\
+# 	bsdmainutils	\
+# 	evtest	\
+# 	g++	\
+# 	less	\
+# 	libc-ares-dev	\
+# 	libertas-firmware	\
+# 	libnss3	\
+# 	libopencv-core-dev	\
+# 	libsdl1.2-dev	\
+# 	libspeechd2	\
+# 	libssl-dev	\
+# 	libxml2-dev	\
+# 	libxslt1.1	\
+# 	libxss1	\
+# 	nano	\
+# 	ntpdate	\
+# 	python-serial	\
+# 	python-setuptools	\
+# 	python-smbus	\
+# 	wicd-cli	\
+# 	wicd-curses	\
+# 	wicd-gtk	\
+# 	x11-xserver-utils	\
+# 	xrdp	\
+# 	xserver-xorg	\
+# "
+
+
 rfs_username="machinekit"
 rfs_fullname="Kit Ex Machina"
 rfs_password="machinekit"
@@ -62,18 +174,55 @@ rfs_ssh_user_pass="enable"
 ##
 ##enable kernel repo: http://repos.rcn-ee.com/(debian|ubuntu)
 repo_rcnee="enable"
-repo_rcnee_pkg_list="linux-image-3.8.13-xenomai-r78 \
-bb-customizations bb-wl18xx-firmware bb-node-red-installer \
-bb-bonescript-installer-beta doc-beaglebone-getting-started \
-am335x-pru-package ipumm-dra7xx-installer vpdma-dra7xx-installer \
-c9-core-installer chromium-browser cmst compton-conf device-tree-compiler \
-haveged libfm-tools libgl1-mesa-dri libsoc-dev \
-libsoc2 lximage-qt lxqt-about lxqt-admin lxqt-common lxqt-config lxqt-globalkeys \
-lxqt-notificationd lxqt-panel lxqt-policykit lxqt-runner lxqt-session lxqt-sudo \
-mesa-utils mesa-utils-extra obconf \
-pcmanfm-qt qps qterminal qupzilla \
-rcn-ee-archive-keyring ti-c6000-cgt-v8.0.x-installer ti-llvm-3.3 ti-opencl \
-ti-pru-cgt-installer ti-wlconf tiomapconf xserver-xorg-video-omap"
+repo_rcnee_pkg_list="	\
+	am335x-pru-package	\
+	bb-bonescript-installer-beta	\
+	bb-customizations	\
+	bb-node-red-installer	\
+	bb-wl18xx-firmware	\
+	c9-core-installer	\
+	chromium-browser	\
+	cmst	\
+	compton-conf	\
+	device-tree-compiler	\
+	doc-beaglebone-getting-started	\
+	haveged	\
+	ipumm-dra7xx-installer	\
+	libfm-tools	\
+	libgl1-mesa-dri	\
+	libsoc-dev	\
+	libsoc2	\
+	linux-image-3.8.13-xenomai-r78	\
+	lximage-qt	\
+	lxqt-about	\
+	lxqt-admin	\
+	lxqt-common	\
+	lxqt-config	\
+	lxqt-globalkeys	\
+	lxqt-notificationd	\
+	lxqt-panel	\
+	lxqt-policykit	\
+	lxqt-runner	\
+	lxqt-session	\
+	lxqt-sudo	\
+	mesa-utils	\
+	mesa-utils-extra	\
+	obconf	\
+	pcmanfm-qt	\
+	qps	\
+	qterminal	\
+	qupzilla	\
+	rcn-ee-archive-keyring	\
+	ti-c6000-cgt-v8.0.x-installer	\
+	ti-llvm-3.3	\
+	ti-opencl	\
+	ti-pru-cgt-installer	\
+	ti-wlconf	\
+	tiomapconf	\
+	vpdma-dra7xx-installer	\
+	xserver-xorg-video-omap	\
+"
+
 ##
 ##nodejs: https://github.com/nodesource/distributions
 repo_nodesource="node_0.12"
