--- a/configs/machinekit-debian-jessie-mah.conf
+++ b/configs/machinekit-debian-jessie-mah.conf
@@ -171,6 +171,6 @@ repo_external_pkg_list="	\
 chroot_COPY_SETUP_SDCARD="enable"
 chroot_before_hook=""
 chroot_after_hook=""
-chroot_script="machinekit-jessie.sh"
+chroot_script="machinekit-jessie-mah.sh"
 chroot_post_uenv_txt="post_machinekit.txt"
 chroot_tarball="enable"
