--- a/configs/machinekit-debian-jessie-de0.conf
+++ b/configs/machinekit-debian-jessie-de0.conf
@@ -1,6 +1,6 @@
 ##
 release="8.4"
-image_type="minimal"
+image_type="de0"
 ##
 ##Debootstrap: https://wiki.debian.org/Debootstrap
 ##
@@ -11,79 +11,137 @@ deb_distribution="debian"
 deb_codename="jessie"
 deb_arch="armhf"
 deb_include="	\
+	acpid	\
 	apache2	\
 	atmel-firmware	\
+	autoconf	\
+	automake1.11	\
 	avahi-daemon	\
+	bison	\
 	bsdmainutils	\
 	btrfs-tools	\
+	build-essential	\
 	ca-certificates	\
 	cpufrequtils	\
+	curl	\
+	device-tree-compiler	\
 	dosfstools	\
+	evtest	\
 	fbset	\
 	file	\
 	firmware-ralink	\
 	firmware-realtek	\
+	flex	\
+	g++	\
+	gdb	\
 	git-core	\
 	hdparm	\
 	hexedit	\
 	hostapd	\
 	i2c-tools	\
 	initramfs-tools	\
+	less	\
 	libertas-firmware	\
+	libnss-mdns	\
+	libnss3	\
+	libopencv-core-dev	\
+	libopencv-dev	\
+	libsdl1.2-dev	\
+	libspeechd2	\
+	libssl-dev	\
+	libtool	\
+	libxml2-dev	\
+	libxslt1.1	\
+	libxss1	\
 	locales	\
-	lowpan-tools	\
 	lshw	\
 	memtester	\
 	mtd-utils	\
 	nano	\
+	nodejs	\
+	ntpdate	\
 	openssh-server	\
+	pastebinit	\
+	pkg-config	\
 	ppp	\
+	python-opencv	\
+	python-pip	\
+	python-serial	\
+	python-setuptools	\
+	python-smbus	\
+	python2.7-dev	\
 	read-edid	\
 	rsync	\
+	ruby	\
+	ruby-dev	\
+	screen	\
 	sudo	\
 	systemd	\
+	tmux	\
 	u-boot-tools	\
 	udhcpd	\
 	usb-modeswitch	\
 	usbutils	\
+	vim	\
+	wicd-cli	\
+	wicd-curses	\
+	wicd-gtk	\
 	wireless-tools	\
 	wpasupplicant	\
 	wvdial	\
 	zd1211-firmware	\
 "
 
+
 deb_exclude=""
 deb_components="main contrib non-free"
 deb_mirror=""
 ##
-##Some packages fail to install via debootstrap: deb_additional_pkgs="<comma|space>"
-##
-deb_additional_pkgs="	\
-	lsb-release	\
-	pastebinit	\
-	python-dbus	\
-"
-
-##
-rfs_username="debian"
-rfs_fullname="Demo User"
-rfs_password="temppwd"
-rfs_hostname="arm"
+rfs_username="machinekit"
+rfs_fullname="Kit Ex Machina"
+rfs_password="machinekit"
+rfs_hostname="mksocfpga"
 rfs_startup_scripts="enable"
 rfs_opt_scripts="https://github.com/RobertCNelson/boot-scripts"
 rfs_default_locale="en_US.UTF-8"
-rfs_console_banner=""
+rfs_etc_dogtag="Machinekit Debian Image"
+rfs_console_banner="Support/FAQ: http://www.machinekit.io/"
 rfs_console_user_pass="enable"
-rfs_ssh_banner=""
-rfs_ssh_user_pass=""
+rfs_ssh_banner="Support/FAQ: http://www.machinekit.io/"
+rfs_ssh_user_pass="enable"
 ##
 ##enable kernel repo: http://repos.rcn-ee.com/(debian|ubuntu)
 repo_rcnee="enable"
 repo_rcnee_pkg_list="	\
+	acpi-support-base	\
+	libsoc-dev	\
+	libsoc2	\
 	rcn-ee-archive-keyring	\
 "
 
-include_firmware="enable"
-##
-#chroot_very_small_image=""
+
+#
+repo_external="enable"
+repo_external_arch="armhf"
+repo_external_server="http://deb.machinekit.io/debian"
+repo_external_dist="jessie"
+repo_external_components="main"
+repo_external_key="deb.machinekit.io.pubkey.asc"
+repo_external_pkg_list="	\
+	hm2reg-uio-dkms	\
+	linux-headers-3.10.37-ltsi-rt37-05841-g81c6be3	\
+	linux-image-3.10.37-ltsi-rt37-05841-g81c6be3	\
+	machinekit	\
+	machinekit-dev	\
+	machinekit-rt-preempt	\
+"
+
+
+#
+chroot_COPY_SETUP_SDCARD="enable"
+chroot_before_hook=""
+chroot_after_hook=""
+# chroot_script="machinekit-jessie-socfpga.sh"
+chroot_script="machinekit-jessie.sh"
+chroot_post_uenv_txt="post_machinekit.txt"
 chroot_tarball="enable"
