make machinekit-debian-jessie.conf use it

--- a/configs/machinekit-debian-jessie-de0.conf
+++ b/configs/machinekit-debian-jessie-de0.conf
@@ -141,7 +141,6 @@ repo_external_pkg_list="	\
 chroot_COPY_SETUP_SDCARD="enable"
 chroot_before_hook=""
 chroot_after_hook=""
-# chroot_script="machinekit-jessie-socfpga.sh"
-chroot_script="machinekit-jessie.sh"
-chroot_post_uenv_txt="post_machinekit.txt"
+chroot_script="machinekit-jessie-de0.sh"
+chroot_post_uenv_txt="post_machinekit-de0.txt"
 chroot_tarball="enable"
