--- a/configs/machinekit-debian-jessie-de0.conf
+++ b/configs/machinekit-debian-jessie-de0.conf
@@ -1,79 +1,78 @@
 ##
 release="8.4"
-image_type="de0"
+image_type="machinekit-de0"
 ##
 ##Debootstrap: https://wiki.debian.org/Debootstrap
 ##
 ##debootstrap --arch=${deb_arch} --include=${deb_include} --exclude=${deb_exclude} \
 ##--components=${deb_components} --foreign ${deb_codename} /tmp/tmp.dir/ http://${deb_mirror}
 ##
+##Debian Jessie (Stable) armhf
+##
 deb_distribution="debian"
 deb_codename="jessie"
 deb_arch="armhf"
+#
 deb_include="	\
-	acpid	\
+	alsa-utils	\
 	apache2	\
-	atmel-firmware	\
+	apt-transport-https	\
 	autoconf	\
-	automake1.11	\
+	automake	\
 	avahi-daemon	\
+	bash-completion	\
+	bc	\
 	bison	\
-	bsdmainutils	\
-	btrfs-tools	\
+	bluetooth	\
 	build-essential	\
 	ca-certificates	\
 	cpufrequtils	\
 	curl	\
 	device-tree-compiler	\
+	debhelper	\
 	dosfstools	\
+	fakeroot	\
 	evtest	\
 	fbset	\
 	file	\
+	firmware-atheros	\
 	firmware-ralink	\
 	firmware-realtek	\
+	firmware-zd1211	\
 	flex	\
-	g++	\
 	gdb	\
 	git-core	\
 	hdparm	\
 	hexedit	\
 	hostapd	\
+	htop	\
 	i2c-tools	\
+	info	\
 	initramfs-tools	\
+	iperf	\
+	iw	\
 	less	\
-	libertas-firmware	\
+	libncurses5-dev	\
 	libnss-mdns	\
-	libnss3	\
-	libopencv-dev	\
-	libsdl1.2-dev	\
-	libspeechd2	\
-	libssl-dev	\
 	libtool	\
-	libxml2-dev	\
-	libxslt1.1	\
-	libxss1	\
+	libusb-1.0-0-dev	\
+	linux-base	\
 	locales	\
 	lshw	\
+	lsof	\
+	lzma	\
+	lzop	\
 	memtester	\
-	mtd-utils	\
-	nano	\
-	nodejs	\
-	ntpdate	\
 	openssh-server	\
-	pastebinit	\
 	pkg-config	\
 	ppp	\
-	python-opencv	\
-	python-pip	\
-	python-serial	\
-	python-setuptools	\
-	python-smbus	\
-	python2.7-dev	\
 	read-edid	\
+	rfkill	\
 	rsync	\
 	ruby	\
 	ruby-dev	\
 	screen	\
+	ssl-cert	\
 	sudo	\
 	systemd	\
 	tmux	\
@@ -81,10 +80,9 @@ deb_include="	\
 	udhcpd	\
 	usb-modeswitch	\
 	usbutils	\
+	v4l-utils	\
 	vim	\
-	wicd-cli	\
-	wicd-curses	\
-	wicd-gtk	\
+	wget	\
 	wireless-tools	\
 	wpasupplicant	\
 	wvdial	\
@@ -96,6 +94,61 @@ deb_exclude=""
 deb_components="main contrib non-free"
 deb_mirror=""
 ##
+##Some packages fail to install via debootstrap: deb_additional_pkgs="<comma|space>"
+##
+#python-2.7: due to: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=769106
+#
+deb_additional_pkgs="	\
+	bmap-tools	\
+	libopencv-dev	\
+	libpython2.7-dev	\
+	lsb-release	\
+	nodejs	\
+	pastebinit	\
+	pylint	\
+	python-dbus	\
+	python-dev	\
+	python-flask	\
+	python-minimal	\
+	python-opencv	\
+	python-pip	\
+	vim-nox	\
+"
+
+#Packages that were in BBB Wheezy but not in Jessie
+# deb_additional_pkgs="	\
+# 	acpid	\
+# 	apache2-utils	\
+# 	atmel-firmware	\
+# 	bluez	\
+# 	bsdmainutils	\
+# 	evtest	\
+# 	g++	\
+# 	less	\
+# 	libc-ares-dev	\
+# 	libertas-firmware	\
+# 	libnss3	\
+# 	libopencv-core-dev	\
+# 	libsdl1.2-dev	\
+# 	libspeechd2	\
+# 	libssl-dev	\
+# 	libxml2-dev	\
+# 	libxslt1.1	\
+# 	libxss1	\
+# 	nano	\
+# 	ntpdate	\
+# 	python-serial	\
+# 	python-setuptools	\
+# 	python-smbus	\
+# 	wicd-cli	\
+# 	wicd-curses	\
+# 	wicd-gtk	\
+# 	x11-xserver-utils	\
+# 	xrdp	\
+# 	xserver-xorg	\
+# "
+
+
 rfs_username="machinekit"
 rfs_fullname="Kit Ex Machina"
 rfs_password="machinekit"
@@ -118,6 +171,12 @@ repo_rcnee_pkg_list="	\
 	rcn-ee-archive-keyring	\
 "
 
+##
+##nodejs: https://github.com/nodesource/distributions
+repo_nodesource="node_0.12"
+#repo_nodesource="node_4.x"
+#repo_nodesource="node_5.x"
+##
 
 #
 repo_external="enable"
