--- a/configs/machinekit-debian-jessie-de0.conf
+++ b/configs/machinekit-debian-jessie-de0.conf
@@ -192,7 +192,10 @@ repo_external_pkg_list="	\
 	machinekit	\
 	machinekit-dev	\
 	machinekit-rt-preempt	\
+	socfpga-rbf	\
+	u-boot-socfpga	\
 "
+
 
 
 #
