turn off web download for bootloader
for now, try setup_card.sh --spl /boot/u-boot-with-spl.sfp  ...

--- a/tools/hwpack/socfpga-de0-nano.conf
+++ b/tools/hwpack/socfpga-de0-nano.conf
@@ -4,12 +4,10 @@
 #Bootloader:
 conf_board="de0_nano"
 
-# override for now
-# conf_bl_http="https://rcn-ee.com/repos/bootloader/latest"
-conf_bl_http="http://static.mah.priv.at/public/socfpga/latest"
-conf_bl_listfile="bootloader-ng"
-
 #Bootloader Partition:
+
+#boot_name="u-boot-with-spl.sfp"  # in /boot
+
 bootloader_location="raw_partition"
 bootloader_ptype="A2"
 conf_boot_startmb=1
