hwpack/socfpga-de0-nano.conf: exract u-boot binary from rootfs tar file

--- a/tools/hwpack/socfpga-de0-nano.conf
+++ b/tools/hwpack/socfpga-de0-nano.conf
@@ -5,21 +5,14 @@
 conf_board="de0_nano"
 
 #Bootloader Partition:
-
-#boot_name="u-boot-with-spl.sfp"  # in /boot
-
 bootloader_location="raw_partition"
 bootloader_ptype="A2"
 conf_boot_startmb=1
 conf_boot_endmb=1
 
-# fake boot_name to trigger download
-# will be dd'd into partition a2
-boot_name="foo.img"
+# the uboot binary is already in the rootfs
+# extract it from there (package u-boot-socfpga)
+boot_name_in_rootfs="./boot/u-boot-with-spl.sfp"
 
 #Kernel:
 conf_kernel="socfpga"
-
-# files in /boot come from git repo, branch = ${conf_board}
-conf_boot_repo="https://github.com/mhaberler/boot_files"
-conf_boot_branch="de0_nano"
