--- a/configs/machinekit-debian-jessie-de0.conf
+++ b/configs/machinekit-debian-jessie-de0.conf
@@ -26,6 +26,7 @@ deb_include="	\
 	bluetooth	\
 	build-essential	\
 	ca-certificates	\
+	connman	\
 	cpufrequtils	\
 	curl	\
 	device-tree-compiler	\
@@ -103,6 +104,7 @@ deb_additional_pkgs="	\
 	libopencv-dev	\
 	libpython2.7-dev	\
 	lsb-release	\
+	ntpdate 	\
 	nodejs	\
 	pastebinit	\
 	pylint	\
