tools/hwpack/socfpga-de0-nano.conf: revert to v2016.01 - u-boot name change

--- a/tools/hwpack/socfpga-de0-nano.conf
+++ b/tools/hwpack/socfpga-de0-nano.conf
@@ -12,7 +12,7 @@ conf_boot_endmb=1
 
 # the uboot binary is already in the rootfs
 # extract it from there (package u-boot-socfpga)
-boot_name_in_rootfs="./boot/u-boot-with-spl.sfp"
+boot_name_in_rootfs="./boot/u-boot-with-spl-dtb.sfp"
 
 #Kernel:
 conf_kernel="socfpga"
