use Gemified kernel ;)

--- a/configs/machinekit-debian-jessie-de0.conf
+++ b/configs/machinekit-debian-jessie-de0.conf
@@ -189,14 +189,15 @@ repo_external_components="main"
 repo_external_key="deb.machinekit.io.pubkey.asc"
 repo_external_pkg_list="	\
 	hm2reg-uio-dkms	\
-	linux-headers-3.10.37-ltsi-rt37-05841-g81c6be3	\
-	linux-image-3.10.37-ltsi-rt37-05841-g81c6be3	\
+	linux-headers-socfpga-rt	\
+	linux-image-socfpga-rt	\
 	machinekit	\
 	machinekit-dev	\
 	machinekit-rt-preempt	\
 	socfpga-rbf	\
 	u-boot-socfpga	\
 "
+
 
 
 
