--- a/configs/machinekit-debian-jessie.conf
+++ b/configs/machinekit-debian-jessie.conf
@@ -1,6 +1,6 @@
 ##
 release="8.4"
-image_type="machinekit"
+image_type="machinekit-lxqt-4gb"
 ##
 ##Debootstrap: https://wiki.debian.org/Debootstrap
 ##
@@ -12,19 +12,88 @@ image_type="machinekit"
 deb_distribution="debian"
 deb_codename="jessie"
 deb_arch="armhf"
+#
 deb_include="	\
+	alsa-utils	\
+	apache2	\
+	apt-transport-https	\
+	autoconf	\
+	automake	\
+	avahi-daemon	\
+	bash-completion	\
+	bc	\
+	bison	\
+	bluetooth	\
+	build-essential	\
 	ca-certificates	\
+	connman	\
+	cpufrequtils	\
+	curl	\
+	dbus-x11	\
+	debhelper	\
 	dosfstools	\
+	fakeroot	\
+	fbset	\
+	file	\
+	firmware-atheros	\
+	firmware-ralink	\
+	firmware-realtek	\
+	firmware-zd1211	\
+	flex	\
+	gdb	\
 	git-core	\
+	hdparm	\
+	hexedit	\
+	hostapd	\
+	htop	\
+	i2c-tools	\
+	info	\
 	initramfs-tools	\
+	iperf	\
+	iw	\
+	libncurses5-dev	\
+	libnss-mdns	\
+	libtool	\
+	libusb-1.0-0-dev	\
+	lightdm	\
 	linux-base	\
 	locales	\
-	lsb-release	\
+	lshw	\
+	lsof	\
+	lzma	\
+	lzop	\
+	memtester	\
+	openbox	\
 	openssh-server	\
+	pkg-config	\
+	ppp	\
+	read-edid	\
+	rfkill	\
 	rsync	\
+	ruby	\
+	ruby-dev	\
+	screen	\
+	ssl-cert	\
 	sudo	\
 	systemd	\
+	tightvncserver	\
+	tmux	\
+	u-boot-tools	\
+	udhcpd	\
+	usb-modeswitch	\
+	usbutils	\
+	v4l-utils	\
+	vim	\
 	wget	\
+	wireless-tools	\
+	wpasupplicant	\
+	wvdial	\
+	xinput	\
+	xinput-calibrator	\
+	xorg	\
+	xserver-xorg-video-fbdev	\
+	xserver-xorg-video-modesetting	\
+	zd1211-firmware	\
 "
 
 #
@@ -35,96 +104,66 @@ deb_mirror=""
 ##
 ##Some packages fail to install via debootstrap: deb_additional_pkgs="<comma|space>"
 ##
+#python-2.7: due to: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=769106
+#
 deb_additional_pkgs="	\
-	acpid	\
-	alsa-utils	\
-	apache2	\
-	apache2-utils	\
-	apt-transport-https	\
-	atmel-firmware	\
-	autoconf	\
-	automake1.11	\
-	avahi-daemon	\
-	bison	\
-	bluez	\
-	bsdmainutils	\
-	build-essential	\
-	cpufrequtils	\
-	curl	\
-	device-tree-compiler	\
-	evtest	\
-	fbset	\
-	file	\
-	firmware-ralink	\
-	firmware-realtek	\
-	flex	\
-	g++	\
-	gdb	\
-	hexedit	\
-	hostapd	\
-	i2c-tools	\
-	leafpad	\
-	less	\
-	libc-ares-dev	\
-	libertas-firmware	\
-	libnss-mdns	\
-	libnss3	\
-	libopencv-core-dev	\
+	bmap-tools	\
 	libopencv-dev	\
-	libsdl1.2-dev	\
-	libspeechd2	\
-	libssl-dev	\
-	libtool	\
-	libxml2-dev	\
-	libxslt1.1	\
-	libxss1	\
-	lightdm	\
-	lshw	\
-	lxde-core	\
-	nano	\
+	libpython2.7-dev	\
+	lsb-release	\
 	nodejs	\
-	ntpdate	\
 	pastebinit	\
-	pkg-config	\
-	ppp	\
+	pylint	\
+	python-dbus	\
+	python-dev	\
+	python-flask	\
+	python-minimal	\
 	python-opencv	\
 	python-pip	\
-	python-serial	\
-	python-setuptools	\
-	python-smbus	\
-	python2.7-dev	\
-	read-edid	\
-	ruby	\
-	ruby-dev	\
-	screen	\
-	tmux	\
-	udhcpd	\
-	usb-modeswitch	\
-	usbutils	\
-	vim	\
-	wicd-cli	\
-	wicd-curses	\
-	wicd-gtk	\
-	wireless-tools	\
-	wpasupplicant	\
-	wvdial	\
-	x11-xserver-utils	\
-	xinput	\
-	xrdp	\
-	xserver-xorg	\
-	xserver-xorg-video-fbdev	\
-	xserver-xorg-video-modesetting	\
-	zd1211-firmware	\
+	vim-nox	\
 "
 
-##
+#Packages that were in BBB Wheezy but not in Jessie
+# deb_additional_pkgs="	\
+# 	acpid	\
+# 	apache2-utils	\
+# 	atmel-firmware	\
+# 	bluez	\
+# 	bsdmainutils	\
+# 	evtest	\
+# 	g++	\
+# 	less	\
+# 	libc-ares-dev	\
+# 	libertas-firmware	\
+# 	libnss3	\
+# 	libopencv-core-dev	\
+# 	libsdl1.2-dev	\
+# 	libspeechd2	\
+# 	libssl-dev	\
+# 	libxml2-dev	\
+# 	libxslt1.1	\
+# 	libxss1	\
+# 	nano	\
+# 	ntpdate	\
+# 	python-serial	\
+# 	python-setuptools	\
+# 	python-smbus	\
+# 	wicd-cli	\
+# 	wicd-curses	\
+# 	wicd-gtk	\
+# 	x11-xserver-utils	\
+# 	xrdp	\
+# 	xserver-xorg	\
+# "
+
+
 rfs_username="machinekit"
 rfs_fullname="Kit Ex Machina"
 rfs_password="machinekit"
 rfs_hostname="beaglebone"
 rfs_startup_scripts="enable"
 rfs_opt_scripts="https://github.com/RobertCNelson/boot-scripts"
-rfs_default_desktop="LXDE"
+rfs_default_desktop="lxqt"
 rfs_desktop_background="/opt/source/machinekit-extras/images/machinekit_background_16x9.svg"
 rfs_default_locale="en_US.UTF-8"
 rfs_etc_dogtag="Machinekit Debian Image"
@@ -136,23 +175,60 @@ rfs_ssh_user_pass="enable"
 ##enable kernel repo: http://repos.rcn-ee.com/(debian|ubuntu)
 repo_rcnee="enable"
 repo_rcnee_pkg_list="	\
-	acpi-support-base	\
 	am335x-pru-package	\
+	bb-bonescript-installer-beta	\
 	bb-customizations	\
+	bb-node-red-installer	\
+	bb-wl18xx-firmware	\
+	c9-core-installer	\
+	chromium-browser	\
+	cmst	\
+	compton-conf	\
+	device-tree-compiler	\
+	doc-beaglebone-getting-started	\
+	haveged	\
 	ipumm-dra7xx-installer	\
+	libfm-tools	\
+	libgl1-mesa-dri	\
 	libsoc-dev	\
 	libsoc2	\
 	linux-image-3.8.13-xenomai-r78	\
+	lximage-qt	\
+	lxqt-about	\
+	lxqt-admin	\
+	lxqt-common	\
+	lxqt-config	\
+	lxqt-globalkeys	\
+	lxqt-notificationd	\
+	lxqt-panel	\
+	lxqt-policykit	\
+	lxqt-runner	\
+	lxqt-session	\
+	lxqt-sudo	\
+	mesa-utils	\
+	mesa-utils-extra	\
+	obconf	\
+	pcmanfm-qt	\
+	qps	\
+	qterminal	\
+	qupzilla	\
 	rcn-ee-archive-keyring	\
+	ti-c6000-cgt-v8.0.x-installer	\
+	ti-llvm-3.3	\
+	ti-opencl	\
+	ti-pru-cgt-installer	\
+	ti-wlconf	\
 	tiomapconf	\
 	vpdma-dra7xx-installer	\
-	xinput-calibrator	\
-	xserver-xorg-video-modesetting	\
+	xserver-xorg-video-omap	\
 "
 
-
-# drop for now:
-# c9-core-installer
+##
+##nodejs: https://github.com/nodesource/distributions
+repo_nodesource="node_0.12"
+#repo_nodesource="node_4.x"
+#repo_nodesource="node_5.x"
+##
 
 repo_rcnee_pkg_version="3.8.13-xenomai-r78"
 include_firmware="enable"
@@ -163,10 +239,7 @@ repo_external_server="http://deb.machinekit.io/debian"
 repo_external_dist="jessie"
 repo_external_components="main"
 repo_external_key="deb.machinekit.io.pubkey.asc"
-repo_external_pkg_list="	\
-	machinekit-xenomai	\
-"
-
+repo_external_pkg_list="machinekit-xenomai"
 #
 chroot_COPY_SETUP_SDCARD="enable"
 chroot_before_hook=""
