machinekit-jessie-de0.conf: include mk development packages

--- a/configs/machinekit-debian-jessie-de0.conf
+++ b/configs/machinekit-debian-jessie-de0.conf
@@ -101,23 +101,99 @@ deb_mirror=""
 ##
 #python-2.7: due to: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=769106
 #
+# this includes the machinekit development prerequisites
+# see https://github.com/kinsamanka/mk_image_builder/blob/master/jessie.conf#L44-L59
 deb_additional_pkgs="	\
+	bc	\
+	blt	\
 	bmap-tools	\
+	bwidget	\
+	freeglut3	\
+	gnome-mime-data	\
+	gstreamer0.10-plugins-base	\
+	libart-2.0-2	\
+	libbonobo2-0	\
+	libbonobo2-common	\
+	libbonoboui2-0	\
+	libbonoboui2-common	\
+	libboost-serialization1.55.0	\
+	libboost-thread1.55.0	\
+	libgail18	\
+	libgnome-2-0	\
+	libgnome2-0	\
+	libgnome2-bin	\
+	libgnome2-common	\
+	libgnomecanvas2-0	\
+	libgnomecanvas2-common	\
+	libgnomeui-0	\
+	libgnomeui-common	\
+	libgnomevfs2-0	\
+	libgnomevfs2-common	\
+	libgstreamer-plugins-base0.10-0	\
+	libgstreamer0.10-0	\
+	libgtkglext1	\
+	libgtksourceview2.0-0	\
+	libgtksourceview2.0-common	\
+	libidl0	\
+	libjansson4	\
+	libmodbus5	\
 	libopencv-dev	\
+	liborbit-2-0	\
+	liborbit2	\
+	libpgm-5.1-0	\
+	libprotobuf9	\
 	libpython2.7-dev	\
+	libsodium13	\
+	libtcl8.6	\
+	libtk-img	\
+	libtk8.6	\
+	liburiparser1	\
+	libwebpdemux1	\
+	libwebpmux1	\
+	libzmq3	\
 	lsb-release	\
-	ntpdate 	\
 	nodejs	\
+	ntpdate	\
 	pastebinit	\
 	pylint	\
+	python-avahi	\
+	python-configobj	\
 	python-dbus	\
 	python-dev	\
 	python-flask	\
+	python-gconf	\
+	python-gdbm	\
+	python-gnome2	\
+	python-gst0.10	\
+	python-gtkglext1	\
+	python-gtksourceview2	\
+	python-imaging	\
+	python-imaging-tk	\
+	python-libxml2	\
 	python-minimal	\
 	python-opencv	\
+	python-opengl	\
+	python-pil	\
+	python-pil.imagetk	\
 	python-pip	\
+	python-protobuf	\
+	python-pyftpdlib	\
+	python-pyorbit	\
+	python-simplejson	\
+	python-tk	\
+	python-vte	\
+	python-xlib	\
+	python-zmq	\
+	tcl	\
+	tcl-tclreadline	\
+	tcl8.6	\
+	tk	\
+	tk8.6	\
+	tk8.6-blt2.5	\
 	vim-nox	\
 "
+
+
 
 #Packages that were in BBB Wheezy but not in Jessie
 # deb_additional_pkgs="	\
