drop mk-build-deps, move to conf

--- a/configs/machinekit-debian-jessie-de0.conf
+++ b/configs/machinekit-debian-jessie-de0.conf
@@ -108,6 +108,7 @@ deb_additional_pkgs="	\
 	blt	\
 	bmap-tools	\
 	bwidget	\
+	cython	\
 	freeglut3	\
 	gnome-mime-data	\
 	gstreamer0.10-plugins-base	\
@@ -116,9 +117,12 @@ deb_additional_pkgs="	\
 	libbonobo2-common	\
 	libbonoboui2-0	\
 	libbonoboui2-common	\
+	libboost-python-dev	\
 	libboost-serialization1.55.0	\
 	libboost-thread1.55.0	\
 	libgail18	\
+	libgl1-mesa-dev	\
+	libglu1-mesa-dev	\
 	libgnome-2-0	\
 	libgnome2-0	\
 	libgnome2-bin	\
@@ -136,6 +140,7 @@ deb_additional_pkgs="	\
 	libgtksourceview2.0-common	\
 	libidl0	\
 	libjansson4	\
+	libmodbus-dev	\
 	libmodbus5	\
 	libopencv-dev	\
 	liborbit-2-0	\
@@ -143,6 +148,7 @@ deb_additional_pkgs="	\
 	libpgm-5.1-0	\
 	libprotobuf9	\
 	libpython2.7-dev	\
+	libreadline-dev	\
 	libsodium13	\
 	libtcl8.6	\
 	libtk-img	\
@@ -150,6 +156,9 @@ deb_additional_pkgs="	\
 	liburiparser1	\
 	libwebpdemux1	\
 	libwebpmux1	\
+	libxaw7-dev	\
+	libxmu-dev	\
+	libxmu-headers	\
 	libzmq3	\
 	lsb-release	\
 	nodejs	\
