de0/jessie: more pkgs

--- a/configs/machinekit-debian-jessie-de0.conf
+++ b/configs/machinekit-debian-jessie-de0.conf
@@ -113,17 +113,25 @@ deb_additional_pkgs="	\
 	gnome-mime-data	\
 	gstreamer0.10-plugins-base	\
 	libart-2.0-2	\
+	libavahi-client-dev	\
+	libavahi-common-dev	\
 	libbonobo2-0	\
 	libbonobo2-common	\
 	libbonoboui2-0	\
 	libbonoboui2-common	\
+	libboost-atomic1.55-dev	\
+	libboost-chrono1.55-dev	\
+	libboost-date-time1.55-dev	\
 	libboost-python-dev	\
-	libboost-serialization1.55.0	\
-	libboost-thread1.55.0	\
+	libboost-serialization-dev	\
+	libboost-serialization1.55-dev	\
+	libboost-system1.55-dev	\
+	libboost-thread-dev	\
+	libczmq-dev	\
+	libdbus-1-dev	\
 	libgail18	\
 	libgl1-mesa-dev	\
 	libglu1-mesa-dev	\
-	libgnome-2-0	\
 	libgnome2-0	\
 	libgnome2-bin	\
 	libgnome2-common	\
@@ -139,23 +147,24 @@ deb_additional_pkgs="	\
 	libgtksourceview2.0-0	\
 	libgtksourceview2.0-common	\
 	libidl0	\
-	libjansson4	\
+	libjansson-dev	\
 	libmodbus-dev	\
-	libmodbus5	\
 	libopencv-dev	\
 	liborbit-2-0	\
-	liborbit2	\
 	libpgm-5.1-0	\
-	libprotobuf9	\
+	libprotobuf-dev	\
+	libprotoc-dev	\
 	libpython2.7-dev	\
 	libreadline-dev	\
 	libsodium13	\
+	libssl-dev	\
 	libtcl8.6	\
 	libtk-img	\
 	libtk8.6	\
-	liburiparser1	\
+	liburiparser-dev	\
 	libwebpdemux1	\
 	libwebpmux1	\
+	libwebsockets-dev	\
 	libxaw7-dev	\
 	libxmu-dev	\
 	libxmu-headers	\
@@ -164,6 +173,7 @@ deb_additional_pkgs="	\
 	nodejs	\
 	ntpdate	\
 	pastebinit	\
+	protobuf-compiler	\
 	pylint	\
 	python-avahi	\
 	python-configobj	\
@@ -199,10 +209,10 @@ deb_additional_pkgs="	\
 	tk	\
 	tk8.6	\
 	tk8.6-blt2.5	\
-	uuid-runtime \
+	uuid-dev	\
+	uuid-runtime	\
 	vim-nox	\
 "
-
 
 
 
