minimze (2) by deborphan

--- a/configs/machinekit-debian-jessie-de0.conf
+++ b/configs/machinekit-debian-jessie-de0.conf
@@ -12,83 +12,263 @@ image_type="machinekit-de0"
 deb_distribution="debian"
 deb_codename="jessie"
 deb_arch="armhf"
-#
+# produced with deborphan -anp required --no-show-section
+# see http://stackoverflow.com/questions/2273836/how-can-i-list-the-minimal-set-of-debian-packages-needed-to-recreate-a-set-of-in
+
 deb_include="	\
+	acpi-support-base	\
 	apache2	\
 	apt-transport-https	\
-	autoconf	\
+	apt-utils	\
+	at	\
 	automake	\
-	avahi-daemon	\
 	bash-completion	\
 	bc	\
 	bison	\
+	blt	\
 	bluetooth	\
-	build-essential	\
-	ca-certificates	\
+	bmap-tools	\
+	bsd-mailx	\
+	bwidget	\
 	connman	\
 	cpufrequtils	\
 	curl	\
+	cython	\
+	dctrl-tools	\
+	debconf-i18n	\
+	debian-keyring	\
+	deborphan	\
 	device-tree-compiler	\
-	debhelper	\
+	devscripts	\
+	dialog	\
+	diffutils	\
+	dmidecode	\
 	dosfstools	\
-	fakeroot	\
+	dput	\
+	e2fsprogs	\
+	equivs	\
 	evtest	\
 	fbset	\
-	file	\
+	findutils	\
 	firmware-atheros	\
 	firmware-ralink	\
 	firmware-realtek	\
-	firmware-zd1211	\
 	flex	\
+	freeglut3	\
+	gcc-4.8-base	\
 	gdb	\
 	git-core	\
+	gnome-mime-data	\
+	grep	\
+	gstreamer0.10-plugins-base	\
+	gzip	\
 	hdparm	\
 	hexedit	\
+	hicolor-icon-theme	\
 	hostapd	\
+	hostname	\
 	htop	\
 	i2c-tools	\
+	ifupdown	\
 	info	\
+	init	\
 	initramfs-tools	\
 	iperf	\
+	iptables	\
+	iputils-ping	\
+	isc-dhcp-client	\
 	iw	\
+	javascript-common	\
 	less	\
+	libart-2.0-2	\
+	libauthen-sasl-perl	\
+	libavahi-client-dev	\
+	libavahi-common-dev	\
+	libbonobo2-0	\
+	libbonobo2-common	\
+	libbonoboui2-0	\
+	libbonoboui2-common	\
+	libboost-atomic1.55-dev	\
+	libboost-chrono1.55-dev	\
+	libboost-date-time1.55-dev	\
+	libboost-iostreams1.55.0	\
+	libboost-python-dev	\
+	libboost-serialization-dev	\
+	libboost-system1.55-dev	\
+	libboost-thread-dev	\
+	libczmq-dev	\
+	libdbus-1-dev	\
+	libdistro-info-perl	\
+	libgail18	\
+	libgl1-mesa-dev	\
+	libgl1-mesa-dri	\
+	libglu1-mesa-dev	\
+	libgnome2-0	\
+	libgnome2-bin	\
+	libgnome2-common	\
+	libgnomecanvas2-0	\
+	libgnomecanvas2-common	\
+	libgnomeui-0	\
+	libgnomeui-common	\
+	libgnomevfs2-0	\
+	libgnomevfs2-common	\
+	libgnomevfs2-extra	\
+	libgstreamer-plugins-base0.10-0	\
+	libgstreamer0.10-0	\
+	libgtk2.0-bin	\
+	libgtkglext1	\
+	libgtksourceview2.0-0	\
+	libgtksourceview2.0-common	\
+	libhtml-form-perl	\
+	libhtml-format-perl	\
+	libidl0	\
+	libjansson-dev	\
+	libjson-perl	\
+	libjson-xs-perl	\
+	libmodbus-dev	\
 	libncurses5-dev	\
 	libnss-mdns	\
+	libopencv-dev	\
+	liborbit-2-0	\
+	libparse-debcontrol-perl	\
+	libperlio-gzip-perl	\
+	libpgm-5.1-0	\
+	libprotobuf-dev	\
+	libprotoc-dev	\
+	libpython2.7-dev	\
+	libraw1394-tools	\
+	libreadline-dev	\
+	libsigc++-2.0-0c2a	\
+	libsodium13	\
+	libssl-dev	\
+	libssl-dev	\
+	libtcl8.6	\
+	libtie-ixhash-perl	\
+	libtk-img	\
+	libtk-img	\
+	libtk8.6	\
 	libtool	\
-	libusb-1.0-0-dev	\
+	libtxc-dxtn-s2tc0	\
 	libudev-dev	\
+	liburiparser-dev	\
+	libusb-1.0-0-dev	\
+	libvisual-0.4-plugins	\
+	libwebpdemux1	\
+	libwebpmux1	\
+	libwebsockets-dev	\
+	libx11-doc	\
+	libxaw7-dev	\
+	libxaw7-dev	\
+	libxmlrpc-lite-perl	\
+	libxmu-dev	\
+	libxmu-headers	\
+	libzmq3	\
+	lintian	\
 	linux-base	\
 	locales	\
+	lockfile-progs	\
+	login	\
+	logrotate	\
+	lsb-release	\
 	lshw	\
 	lsof	\
 	lzma	\
-	lzop	\
+	manpages	\
 	memtester	\
+	nano	\
+	ncurses-base	\
+	net-tools	\
+	netcat-traditional	\
+	nfacct	\
+	nodejs	\
+	ntpdate	\
+	opencv-data	\
 	openssh-server	\
-	pkg-config	\
-	ppp	\
+	pastebinit	\
+	protobuf-compiler	\
+	pylint	\
+	pylint	\
+	python-avahi	\
+	python-blinker	\
+	python-configobj	\
+	python-dbus	\
+	python-dev	\
+	python-egenix-mxdatetime	\
+	python-flask	\
+	python-gconf	\
+	python-gdbm	\
+	python-glade2	\
+	python-gnome2	\
+	python-gst0.10	\
+	python-gtkglext1	\
+	python-gtksourceview2	\
+	python-imaging	\
+	python-imaging-tk	\
+	python-libxml2	\
+	python-minimal	\
+	python-ndg-httpsclient	\
+	python-opencv	\
+	python-opengl	\
+	python-pil	\
+	python-pil.imagetk	\
+	python-pip	\
+	python-protobuf	\
+	python-pyasn1	\
+	python-pyftpdlib	\
+	python-pyinotify	\
+	python-pyorbit	\
+	python-sendfile	\
+	python-simplejson	\
+	python-tk	\
+	python-vte	\
+	python-wheel	\
+	python-xlib	\
+	python-zmq	\
+	python3-apt	\
+	python3-debian	\
+	python3-magic	\
 	read-edid	\
 	rfkill	\
 	rsync	\
+	rsyslog	\
 	ruby	\
 	ruby-dev	\
 	screen	\
+	sed	\
 	ssl-cert	\
-	strace  \
+	strace	\
 	sudo	\
-	systemd	\
+	tcl	\
+	tcl-tclreadline	\
+	tcl8.6	\
+	tk	\
+	tk8.6	\
+	tk8.6-blt2.5	\
+	tk8.6-dev	\
 	tmux	\
+	traceroute	\
 	u-boot-tools	\
 	udhcpd	\
+	unzip	\
 	usb-modeswitch	\
 	usbutils	\
+	uuid-dev	\
+	uuid-runtime	\
 	v4l-utils	\
+	va-driver-all	\
 	vim	\
+	vim-nox	\
+	vim-tiny	\
+	wdiff	\
 	wget	\
+	whiptail	\
 	wireless-tools	\
 	wpasupplicant	\
 	wvdial	\
-	xauth \
+	x11-utils	\
+	xauth	\
+	xterm	\
+	yapps2-runtime	\
 	zd1211-firmware	\
 "
 
@@ -103,116 +283,7 @@ deb_mirror=""
 #
 # this includes the machinekit development prerequisites
 # see https://github.com/kinsamanka/mk_image_builder/blob/master/jessie.conf#L44-L59
-deb_additional_pkgs="	\
-	bc	\
-	blt	\
-	bmap-tools	\
-	bwidget	\
-	cython	\
-	freeglut3	\
-	gnome-mime-data	\
-	gstreamer0.10-plugins-base	\
-	libart-2.0-2	\
-	libavahi-client-dev	\
-	libavahi-common-dev	\
-	libbonobo2-0	\
-	libbonobo2-common	\
-	libbonoboui2-0	\
-	libbonoboui2-common	\
-	libboost-atomic1.55-dev	\
-	libboost-chrono1.55-dev	\
-	libboost-date-time1.55-dev	\
-	libboost-python-dev	\
-	libboost-serialization-dev	\
-	libboost-serialization1.55-dev	\
-	libboost-system1.55-dev	\
-	libboost-thread-dev	\
-	libczmq-dev	\
-	libdbus-1-dev	\
-	libgail18	\
-	libgl1-mesa-dev	\
-	libglu1-mesa-dev	\
-	libgnome2-0	\
-	libgnome2-bin	\
-	libgnome2-common	\
-	libgnomecanvas2-0	\
-	libgnomecanvas2-common	\
-	libgnomeui-0	\
-	libgnomeui-common	\
-	libgnomevfs2-0	\
-	libgnomevfs2-common	\
-	libgstreamer-plugins-base0.10-0	\
-	libgstreamer0.10-0	\
-	libgtkglext1	\
-	libgtksourceview2.0-0	\
-	libgtksourceview2.0-common	\
-	libidl0	\
-	libjansson-dev	\
-	libmodbus-dev	\
-	libopencv-dev	\
-	liborbit-2-0	\
-	libpgm-5.1-0	\
-	libprotobuf-dev	\
-	libprotoc-dev	\
-	libpython2.7-dev	\
-	libreadline-dev	\
-	libsodium13	\
-	libssl-dev	\
-	libtcl8.6	\
-	libtk-img	\
-	libtk8.6	\
-	liburiparser-dev	\
-	libwebpdemux1	\
-	libwebpmux1	\
-	libwebsockets-dev	\
-	libxaw7-dev	\
-	libxmu-dev	\
-	libxmu-headers	\
-	libzmq3	\
-	lsb-release	\
-	nodejs	\
-	ntpdate	\
-	pastebinit	\
-	protobuf-compiler	\
-	pylint	\
-	python-avahi	\
-	python-configobj	\
-	python-dbus	\
-	python-dev	\
-	python-flask	\
-	python-gconf	\
-	python-gdbm	\
-	python-gnome2	\
-	python-gst0.10	\
-	python-gtkglext1	\
-	python-gtksourceview2	\
-	python-imaging	\
-	python-imaging-tk	\
-	python-libxml2	\
-	python-minimal	\
-	python-opencv	\
-	python-opengl	\
-	python-pil	\
-	python-pil.imagetk	\
-	python-pip	\
-	python-protobuf	\
-	python-pyftpdlib	\
-	python-pyorbit	\
-	python-simplejson	\
-	python-tk	\
-	python-vte	\
-	python-xlib	\
-	python-zmq	\
-	tcl	\
-	tcl-tclreadline	\
-	tcl8.6	\
-	tk	\
-	tk8.6	\
-	tk8.6-blt2.5	\
-	uuid-dev	\
-	uuid-runtime	\
-	vim-nox	\
-"
+#deb_additional_pkgs=""
 
 
 
@@ -237,7 +308,6 @@ repo_rcnee_pkg_list="	\
 	libsoc2	\
 	rcn-ee-archive-keyring	\
 "
-
 ##
 ##nodejs: https://github.com/nodesource/distributions
 #repo_nodesource="node_0.12"
