fix local packages

--- a/configs/machinekit-debian-jessie-de0.conf
+++ b/configs/machinekit-debian-jessie-de0.conf
@@ -96,7 +96,6 @@ deb_include="	\
 	libboost-serialization-dev	\
 	libboost-system1.55-dev	\
 	libboost-thread-dev	\
-	libczmq-dev	\
 	libdbus-1-dev	\
 	libdistro-info-perl	\
 	libgail18	\
@@ -155,14 +154,13 @@ deb_include="	\
 	libvisual-0.4-plugins	\
 	libwebpdemux1	\
 	libwebpmux1	\
-	libwebsockets-dev	\
 	libx11-doc	\
 	libxaw7-dev	\
 	libxaw7-dev	\
 	libxmlrpc-lite-perl	\
 	libxmu-dev	\
 	libxmu-headers	\
-	libzmq3	\
+	libzmq	\
 	lintian	\
 	linux-base	\
 	locales	\
@@ -323,6 +321,8 @@ repo_external_components="main"
 repo_external_key="deb.machinekit.io.pubkey.asc"
 repo_external_pkg_list="	\
 	hm2reg-uio-dkms	\
+	libczmq-dev	\
+	libwebsockets-dev	\
 	linux-headers-socfpga-rt	\
 	linux-image-socfpga-rt	\
 	machinekit	\
@@ -331,6 +331,7 @@ repo_external_pkg_list="	\
 	socfpga-rbf	\
 	u-boot-socfpga	\
 "
+
 
 
 
