--- a/configs/machinekit-debian-jessie-de0.conf
+++ b/configs/machinekit-debian-jessie-de0.conf
@@ -28,7 +28,6 @@ deb_include="	\
 	blt	\
 	bluetooth	\
 	bmap-tools	\
-	bsd-mailx	\
 	bwidget	\
 	connman	\
 	cpufrequtils	\
@@ -127,7 +126,6 @@ deb_include="	\
 	libmodbus-dev	\
 	libncurses5-dev	\
 	libnss-mdns	\
-	libopencv-dev	\
 	liborbit-2-0	\
 	libparse-debcontrol-perl	\
 	libperlio-gzip-perl	\
@@ -179,7 +177,6 @@ deb_include="	\
 	nfacct	\
 	nodejs	\
 	ntpdate	\
-	opencv-data	\
 	openssh-server	\
 	pastebinit	\
 	protobuf-compiler	\
@@ -204,7 +201,6 @@ deb_include="	\
 	python-libxml2	\
 	python-minimal	\
 	python-ndg-httpsclient	\
-	python-opencv	\
 	python-opengl	\
 	python-pil	\
 	python-pil.imagetk	\
@@ -275,13 +271,11 @@ deb_mirror=""
 ##
 ##Some packages fail to install via debootstrap: deb_additional_pkgs="<comma|space>"
 ##
-#python-2.7: due to: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=769106
-#
-# this includes the machinekit development prerequisites
-# see https://github.com/kinsamanka/mk_image_builder/blob/master/jessie.conf#L44-L59
-#deb_additional_pkgs=""
-
-
+deb_additional_pkgs="	\
+	libopencv-dev	\
+	opencv-data	\
+	python-opencv	\
+"
 
 rfs_username="machinekit"
 rfs_fullname="Kit Ex Machina"
@@ -295,6 +289,7 @@ rfs_console_banner="Support/FAQ: http://www.machinekit.io/"
 rfs_console_user_pass="enable"
 rfs_ssh_banner="Support/FAQ: http://www.machinekit.io/"
 rfs_ssh_user_pass="enable"
+
 ##
 ##enable kernel repo: http://repos.rcn-ee.com/(debian|ubuntu)
 repo_rcnee="enable"
@@ -333,9 +328,6 @@ repo_external_pkg_list="	\
 "
 
 
-
-
-
 #
 chroot_COPY_SETUP_SDCARD="enable"
 chroot_before_hook=""
@@ -343,3 +335,4 @@ chroot_after_hook=""
 chroot_script="machinekit-jessie-de0.sh"
 chroot_post_uenv_txt="post_machinekit-de0.txt"
 chroot_tarball="enable"
+
