re-add boost-iostreams

--- a/configs/machinekit-debian-jessie-de0-dtbo.conf
+++ b/configs/machinekit-debian-jessie-de0-dtbo.conf
@@ -120,6 +120,7 @@ deb_additional_pkgs="	\
 	libbonobo2-common	\
 	libbonoboui2-0	\
 	libbonoboui2-common	\
+	libboost-iostreams-dev	\
 	libboost-python-dev	\
 	libboost-thread-dev	\
 	libczmq-dev	\
@@ -211,6 +212,7 @@ deb_additional_pkgs="	\
 	uuid-runtime	\
 	vim-nox	\
 "
+
 
 
 
