--- a/configs/machinekit-debian-jessie-de0-dtbo.conf
+++ b/configs/machinekit-debian-jessie-de0-dtbo.conf
@@ -154,7 +154,7 @@ deb_additional_pkgs="	\
 	libreadline-dev	\
 	libsodium13	\
 	libssl-dev	\
-	libstdc++-dev	\
+	libstdc++-4.9-dev	\
 	libtcl8.6	\
 	libtk-img	\
 	libtk8.6	\
