--- a/configs/machinekit-debian-jessie-de0-dtbo.conf
+++ b/configs/machinekit-debian-jessie-de0-dtbo.conf
@@ -270,5 +270,5 @@ chroot_COPY_SETUP_SDCARD="enable"
 chroot_before_hook=""
 chroot_after_hook=""
 chroot_script="machinekit-jessie-de0.sh"
-chroot_post_uenv_txt="post_machinekit-de0.txt"
+chroot_post_uenv_txt="post_machinekit-de0-dtbo.txt"
 chroot_tarball="enable"
