--- a/tools/hwpack/socfpga-de0-nano-dtbo.conf
+++ b/tools/hwpack/socfpga-de0-nano-dtbo.conf
@@ -1,5 +1,5 @@
 #!/bin/bash
-#        --dtb de0_nano (Terasic DE0 Nano socfpga board :supported)
+#        --dtb de0_nano (Terasic DE0 Nano socfpga board)
 
 #Bootloader:
 conf_board="de0_nano"
@@ -16,3 +16,7 @@ boot_name_in_rootfs="./boot/u-boot-with-spl.sfp"
 
 #Kernel:
 conf_kernel="socfpga"
+
+dtb=socfpga_cyclone5_de0_sockit
+
+
