fix dtb extension

--- a/tools/hwpack/socfpga-de0-nano-dtbo.conf
+++ b/tools/hwpack/socfpga-de0-nano-dtbo.conf
@@ -17,6 +17,7 @@ boot_name_in_rootfs="./boot/u-boot-with-spl.sfp"
 #Kernel:
 conf_kernel="socfpga"
 
-dtb=socfpga_cyclone5_de0_sockit
+dtb=socfpga_cyclone5_de0_sockit.dtb
+
 
 
