--- a/configs/machinekit-debian-jessie-de0-dtbo.conf
+++ b/configs/machinekit-debian-jessie-de0-dtbo.conf
@@ -258,6 +258,7 @@ repo_external_pkg_list="	\
 	machinekit	\
 	machinekit-dev	\
 	machinekit-rt-preempt	\
+	machinekit-manual-pages	\
 	socfpga-rbf	\
 	u-boot-socfpga	\
 "
