zturn.conf - pull in libudev-dev connman

--- a/configs/zturn.conf
+++ b/configs/zturn.conf
@@ -20,6 +20,7 @@ deb_include="	\
 	bash-completion	\
 	bsdmainutils	\
 	ca-certificates	\
+	connman	\
 	cpufrequtils	\
 	crda	\
 	device-tree-compiler	\
@@ -40,6 +41,7 @@ deb_include="	\
 	i2c-tools	\
 	initramfs-tools	\
 	iw \
+	libudev-dev	\
 	linux-base	\
 	locales	\
 	lowpan-tools	\
@@ -106,7 +108,7 @@ repo_rcnee_pkg_list="	\
 
 
 repo_rcnee_pkg_version="4.4.16-ti-r38"
-include_firmware="enable"
+include_firmware="disable"
 
 
 repo_external="enable"
