remove kernel libc

--- a/configs/zturn.conf
+++ b/configs/zturn.conf
@@ -107,7 +107,7 @@ repo_rcnee_pkg_list="	\
 "
 
 
-repo_rcnee_pkg_version="4.4.16-ti-r38"
+#repo_rcnee_pkg_version="4.4.16-ti-r38"
 include_firmware="disable"
 
 
@@ -120,7 +120,6 @@ repo_external_key="deb.machinekit.io.pubkey.asc"
 repo_external_pkg_list="	\
 	linux-headers-zynq-rt	\
 	linux-image-zynq-rt	\
-	linux-libc-dev-zynq-rt \
 	machinekit	\
 	machinekit-rt-preempt	\
 	machinekit-manual-pages	\
