libtool pkg-config

--- a/configs/zturn.conf
+++ b/configs/zturn.conf
@@ -42,6 +42,7 @@ deb_include="	\
 	initramfs-tools	\
 	iw \
 	libudev-dev	\
+	libtool	\
 	linux-base	\
 	locales	\
 	lowpan-tools	\
@@ -51,6 +52,7 @@ deb_include="	\
 	openssh-server	\
 	patch	\
 	ppp	\
+	pkg-config \
 	read-edid	\
 	rfkill	\
 	rsync	\
