--- a/configs/machinekit-debian-jessie-zturn.conf
+++ b/configs/machinekit-debian-jessie-zturn.conf
@@ -133,6 +133,7 @@ repo_external_pkg_list="	\
 chroot_COPY_SETUP_SDCARD="enable"
 chroot_before_hook=""
 chroot_after_hook=""
-chroot_script="machinekit-jessie-dev.sh"
+chroot_script="machinekit-jessie-zturn.sh"
 chroot_post_uenv_txt="post_machinekit-zynq.txt"
 chroot_tarball="enable"
+
