enable jessie-backports

--- a/configs/machinekit-debian-jessie-terasic-de0.conf
+++ b/configs/machinekit-debian-jessie-terasic-de0.conf
@@ -136,4 +136,4 @@ chroot_after_hook=""
 chroot_script="machinekit-jessie-de0.sh"
 chroot_post_uenv_txt="post_machinekit-de0-dtbo.txt"
 chroot_tarball="enable"
-
+chroot_enable_debian_backports="enable"
