--- a/configs/machinekit-debian-jessie-zturn.conf
+++ b/configs/machinekit-debian-jessie-zturn.conf
@@ -136,4 +136,4 @@ chroot_after_hook=""
 chroot_script="machinekit-jessie-zturn.sh"
 chroot_post_uenv_txt="post_machinekit-zynq.txt"
 chroot_tarball="enable"
-
+chroot_enable_debian_backports="enable"
