--- a/configs/machinekit-debian-jessie-zturn.conf
+++ b/configs/machinekit-debian-jessie-zturn.conf
@@ -37,12 +37,13 @@ deb_include="	\
 	hdparm	\
 	hexedit	\
 	hostapd	\
-	htop \
+	htop	\
 	i2c-tools	\
 	initramfs-tools	\
-	iw \
-	libudev-dev	\
+	iw	\
+	libnss-mdns	\
 	libtool	\
+	libudev-dev	\
 	linux-base	\
 	locales	\
 	lowpan-tools	\
@@ -51,8 +52,8 @@ deb_include="	\
 	nano	\
 	openssh-server	\
 	patch	\
+	pkg-config	\
 	ppp	\
-	pkg-config \
 	read-edid	\
 	rfkill	\
 	rsync	\
@@ -67,6 +68,7 @@ deb_include="	\
 	wpasupplicant	\
 	wvdial	\
 "
+
 
 deb_exclude=""
 deb_components="main contrib non-free"
@@ -93,7 +95,7 @@ rfs_hostname="mksocfpga"
 rfs_startup_scripts="enable"
 rfs_opt_scripts="https://github.com/RobertCNelson/boot-scripts"
 rfs_default_locale="en_US.UTF-8"
-rfs_etc_dogtag="Machinekit Debian Image"
+rfs_etc_dogtag="Machinekit Debian Image, Xilinx Zynq"
 rfs_console_banner="Support/FAQ: http://www.machinekit.io/"
 rfs_console_user_pass="enable"
 rfs_ssh_banner="Support/FAQ: http://www.machinekit.io/"
