tar: create and extract with --xattrs

--- a/tools/hwpack/socfpga-de0-nano-dtbo.conf
+++ b/tools/hwpack/socfpga-de0-nano-dtbo.conf
@@ -18,3 +18,6 @@ boot_name_in_rootfs="./boot/u-boot-with-spl.sfp"
 conf_kernel="socfpga"
 
 dtb=socfpga_cyclone5_de0_sockit.dtb
+
+# restore capabilities
+tar_extract_opts="--xattrs"
