Changing username for mad image

--- a/configs/jd2-debian-jessie-zynq-zturn.conf
+++ b/configs/jd2-debian-jessie-zynq-zturn.conf
@@ -87,7 +87,7 @@ deb_additional_pkgs="	\
 
 
 ##
-rfs_username="admin"
+rfs_username="mdadmn"
 rfs_fullname="MAD Controller"
 rfs_password="bmoc"
 rfs_hostname="madctrl"
