Minimize the image to test systemd

--- a/configs/jd2-debian-jessie-zynq-zturn.conf
+++ b/configs/jd2-debian-jessie-zynq-zturn.conf
@@ -14,25 +14,14 @@ deb_arch="armhf"
 deb_include="	\
 	acpi-support-base	\
 	acpid	\
-	apache2	\
 	avahi-daemon	\
 	bash-completion	\
 	bsdmainutils	\
 	ca-certificates	\
-	connman	\
 	cpufrequtils	\
-	crda	\
-	device-tree-compiler	\
 	dosfstools	\
 	fbset	\
 	file	\
-	firmware-atheros	\
-	firmware-brcm80211	\
-	firmware-libertas	\
-	firmware-ralink	\
-	firmware-realtek	\
-	firmware-ti-connectivity	\
-	firmware-zd1211	\
 	git-core	\
 	hdparm	\
 	hexedit	\
@@ -40,22 +29,14 @@ deb_include="	\
 	htop	\
 	i2c-tools	\
 	initramfs-tools	\
-	iw	\
 	libnss-mdns	\
-	libtool	\
-	libudev-dev	\
 	linux-base	\
 	locales	\
-	lowpan-tools	\
 	lshw	\
 	memtester	\
 	nano	\
 	openssh-server	\
-	patch	\
-	pkg-config	\
-	ppp	\
-	read-edid	\
-	rfkill	\
+        ppp	\
 	rsync	\
 	sudo	\
 	systemd	\
@@ -74,14 +55,7 @@ deb_mirror=""
 ##Some packages fail to install via debootstrap: deb_additional_pkgs="<comma|space>"
 ##
 deb_additional_pkgs="	\
-	asciidoctor	\
-	bison	\
-	build-essential	\
-	elinks	\
-	flex	\
 	lsb-release	\
-	make	\
-	python-dbus	\
 	systemd-sysv	\
 "
 
@@ -102,10 +76,7 @@ rfs_ssh_user_pass="enable"
 ##
 ##enable kernel repo: http://repos.rcn-ee.com/(debian|ubuntu)
 repo_rcnee="enable"
-repo_rcnee_pkg_list="	\
-	acpi-support-base	\
-	rcn-ee-archive-keyring	\
-"
+repo_rcnee_pkg_list=""
 include_firmware="disable"
 
 repo_external="enable"
@@ -117,9 +88,6 @@ repo_external_key="deb.machinekit.io.pubkey.asc"
 repo_external_pkg_list="	\
 	linux-headers-zynq-rt	\
 	linux-image-zynq-rt	\
-	machinekit	\
-	machinekit-rt-preempt	\
-	machinekit-manual-pages	\
 	socfpga-bit	\
 	u-boot-zturn \
 "
@@ -129,6 +97,6 @@ chroot_COPY_SETUP_SDCARD="enable"
 chroot_before_hook=""
 chroot_after_hook=""
 chroot_script="machinekit-jessie-zturn.sh"
-chroot_post_uenv_txt="post_machinekit-zynq.txt"
+chroot_post_uenv_txt=""
 chroot_tarball="enable"
 chroot_enable_debian_backports="enable"
