--- a/configs/jd2-debian-jessie-zynq-zturn.conf
+++ b/configs/jd2-debian-jessie-zynq-zturn.conf
@@ -36,13 +36,11 @@ deb_include="	\
 	memtester	\
 	nano	\
 	openssh-server	\
-        ppp	\
+	ppp	\
 	rsync	\
 	sudo	\
 	systemd	\
 	udhcpd	\
-	usb-modeswitch	\
-	usbutils	\
 	wget	\
 	wvdial	\
 "
@@ -65,8 +63,7 @@ rfs_username="mdadmn"
 rfs_fullname="MAD Controller"
 rfs_password="bmoc"
 rfs_hostname="madctrl"
-rfs_startup_scripts="enable"
-#rfs_opt_scripts="https://github.com/RobertCNelson/boot-scripts"
+rfs_startup_scripts="disable"
 rfs_default_locale="en_US.UTF-8"
 rfs_etc_dogtag="JD2 MAD Jessie Debian Image for Xilinx Zynq"
 rfs_console_banner="Support/FAQ: http://support.jd2.com/"
@@ -75,7 +72,7 @@ rfs_ssh_banner="Support/FAQ: http://support.jd2.com/"
 rfs_ssh_user_pass="enable"
 ##
 ##enable kernel repo: http://repos.rcn-ee.com/(debian|ubuntu)
-repo_rcnee="enable"
+repo_rcnee="disable"
 repo_rcnee_pkg_list=""
 include_firmware="disable"
 
