Point config to the correct chroot script...

--- a/configs/jd2-debian-jessie-zynq-zturn.conf
+++ b/configs/jd2-debian-jessie-zynq-zturn.conf
@@ -93,7 +93,7 @@ repo_external_pkg_list="	\
 chroot_COPY_SETUP_SDCARD="enable"
 chroot_before_hook=""
 chroot_after_hook=""
-chroot_script="machinekit-jessie-zturn.sh"
+chroot_script="jd2-jessie-zturn.sh"
 chroot_post_uenv_txt=""
 chroot_tarball="enable"
 chroot_enable_debian_backports="enable"
