Updating zturn image

--- a/configs/jd2-debian-jessie-zynq-zturn.conf
+++ b/configs/jd2-debian-jessie-zynq-zturn.conf
@@ -70,11 +70,6 @@ rfs_console_banner="Support/FAQ: http://support.jd2.com/"
 rfs_console_user_pass="enable"
 rfs_ssh_banner="Support/FAQ: http://support.jd2.com/"
 rfs_ssh_user_pass="enable"
-##
-##enable kernel repo: http://repos.rcn-ee.com/(debian|ubuntu)
-repo_rcnee="disable"
-repo_rcnee_pkg_list=""
-include_firmware="disable"
 
 repo_external="enable"
 repo_external_arch="armhf"
@@ -93,7 +88,7 @@ repo_external_pkg_list="	\
 chroot_COPY_SETUP_SDCARD="enable"
 chroot_before_hook=""
 chroot_after_hook=""
-chroot_script="jd2-jessie-zturn.sh"
+chroot_script="jd2-jessie-zynq.sh"
 chroot_post_uenv_txt=""
 chroot_tarball="enable"
 chroot_enable_debian_backports="enable"
