Turning things back on..

--- a/configs/jd2-debian-jessie-zynq-zturn.conf
+++ b/configs/jd2-debian-jessie-zynq-zturn.conf
@@ -41,6 +41,8 @@ deb_include="	\
 	sudo	\
 	systemd	\
 	udhcpd	\
+	usb-modeswitch	\
+	usbutils	\
 	wget	\
 	wvdial	\
 	ntp \
@@ -54,8 +56,14 @@ deb_mirror=""
 ##Some packages fail to install via debootstrap: deb_additional_pkgs="<comma|space>"
 ##
 deb_additional_pkgs="	\
+	bison	\
+	build-essential	\
 	lsb-release	\
+	elinks	\
+	flex	\
+	make	\
 	systemd-sysv	\
+	python-dbus \
 "
 
 
@@ -81,6 +89,9 @@ repo_external_key="deb.machinekit.io.pubkey.asc"
 repo_external_pkg_list="	\
 	linux-headers-zynq-rt	\
 	linux-image-zynq-rt	\
+	machinekit	\
+	machinekit-rt-preempt	\
+	machinekit-manual-pages	\
 	socfpga-bit	\
 	u-boot-zturn \
 "
