Enable auto kernel selection

--- a/configs/jd2-debian-jessie-zynq-zturn.conf
+++ b/configs/jd2-debian-jessie-zynq-zturn.conf
@@ -72,7 +72,7 @@ rfs_username="mdadmn"
 rfs_fullname="MAD Controller"
 rfs_password="bmoc"
 rfs_hostname="madctrl"
-#rfs_startup_scripts="disable"
+#rfs_startup_scripts="enable"
 rfs_default_locale="en_US.UTF-8"
 rfs_etc_dogtag="JD2 MAD Jessie Debian Image for Xilinx Zynq"
 rfs_console_banner="Support/FAQ: http://support.jd2.com/"
