Added missing udev

--- a/configs/jd2-debian-jessie-zynq-zturn.conf
+++ b/configs/jd2-debian-jessie-zynq-zturn.conf
@@ -19,6 +19,8 @@ deb_include="	\
 	bsdmainutils	\
 	ca-certificates	\
 	cpufrequtils	\
+	crda	\
+	device-tree-compiler	\
 	dosfstools	\
 	fbset	\
 	file	\
@@ -30,12 +32,16 @@ deb_include="	\
 	i2c-tools	\
 	initramfs-tools	\
 	libnss-mdns	\
+	libtool	\
+	libudev-dev	\
 	linux-base	\
 	locales	\
 	lshw	\
 	memtester	\
 	nano	\
 	openssh-server	\
+	patch	\
+	pkg-config	\
 	ppp	\
 	rsync	\
 	sudo	\
@@ -56,14 +62,16 @@ deb_mirror=""
 ##Some packages fail to install via debootstrap: deb_additional_pkgs="<comma|space>"
 ##
 deb_additional_pkgs="	\
+	asciidoctor	\
 	bison	\
 	build-essential	\
-	lsb-release	\
 	elinks	\
 	flex	\
+	lsb-release	\
 	make	\
+	pastebinit	\
+	python-dbus	\
 	systemd-sysv	\
-	python-dbus \
 "
 
 
