Use source dependency packages directly

--- a/configs/jd2-debian-jessie-zynq-zturn.conf
+++ b/configs/jd2-debian-jessie-zynq-zturn.conf
@@ -97,9 +97,15 @@ repo_external_key="deb.machinekit.io.pubkey.asc"
 repo_external_pkg_list="	\
 	linux-headers-zynq-rt	\
 	linux-image-zynq-rt	\
-	machinekit	\
-	machinekit-rt-preempt	\
-	machinekit-manual-pages	\
+	libczmq-dev \
+	python-zmq \
+	libjansson-dev \
+	pkg-config \
+	libwebsockets-dev \
+	python-pyftpdlib \
+	cython \
+	bwidget \
+	lsb-release \
 	socfpga-bit	\
 	u-boot-zturn \
 "
