--- a/configs/jd2-debian-jessie-zynq-zturn.conf
+++ b/configs/jd2-debian-jessie-zynq-zturn.conf
@@ -106,10 +106,19 @@ repo_external_pkg_list="	\
 	cython \
 	bwidget \
 	lsb-release \
-	socfpga-bit	\
 	u-boot-zturn \
 	machinekit	\
 	machinekit-rt-preempt \
+"
+
+repo_external="enable"
+repo_external_arch="armhf"
+repo_external_server="http://deb.corp.jd2.com/"
+repo_external_dist="jessie"
+repo_external_components="main"
+repo_external_key="deb.corp.jd2.com.pubkey.asc"
+repo_external_pkg_list="	\
+	socfpga-bit-zynq \
 "
 
 #
