Add package tag

--- a/configs/jd2-debian-jessie-zynq-zturn.conf
+++ b/configs/jd2-debian-jessie-zynq-zturn.conf
@@ -88,13 +88,13 @@ rfs_console_user_pass="enable"
 rfs_ssh_banner="Support/FAQ: http://support.jd2.com/"
 rfs_ssh_user_pass="enable"
 
-repo_external="enable"
-repo_external_arch="armhf"
-repo_external_server="http://deb.machinekit.io/debian"
-repo_external_dist="jessie"
-repo_external_components="main"
-repo_external_key="deb.machinekit.io.pubkey.asc"
-repo_external_pkg_list="	\
+repo_mk="enable"
+repo_mk_arch="armhf"
+repo_mk_server="http://deb.machinekit.io/debian"
+repo_mk_dist="jessie"
+repo_mk_components="main"
+repo_mk_key="deb.machinekit.io.pubkey.asc"
+repo_mk_pkg_list="	\
 	linux-headers-zynq-rt	\
 	linux-image-zynq-rt	\
 	libczmq-dev \
