Fix boot script package name

--- a/configs/jd2-debian-jessie-zynq-zturn.conf
+++ b/configs/jd2-debian-jessie-zynq-zturn.conf
@@ -116,6 +116,8 @@ repo_external_pkg_list="	\
 	socfpga-bit-zynq \
 	machinekit \
 	machinekit-rt-preempt \
+	boot-scripts-jd2 \
+	jd2-configs \
 "
 
 #
