Add missing packages

--- a/configs/jd2-debian-jessie-zynq-zturn.conf
+++ b/configs/jd2-debian-jessie-zynq-zturn.conf
@@ -12,14 +12,16 @@ deb_distribution="debian"
 deb_codename="jessie"
 deb_arch="armhf"
 deb_include="	\
-	acpi-support-base	\
-	acpid	\
+	acpi-support-base \
+	acpid \
+	apt-transport https \
 	avahi-daemon	\
 	bash-completion	\
 	bsdmainutils	\
 	ca-certificates	\
 	cpufrequtils	\
 	crda	\
+	curl \
 	device-tree-compiler	\
 	dosfstools	\
 	fbset	\
@@ -47,6 +49,8 @@ deb_include="	\
 	udhcpd	\
 	usb-modeswitch	\
 	usbutils	\
+	uuid-runtime	\
+	vim	\
 	wget	\
 	wvdial	\
 	ntp \
@@ -67,6 +71,7 @@ deb_additional_pkgs="	\
 	flex	\
 	lsb-release	\
 	make	\
+	nano	\
 	pastebinit	\
 	python-dbus	\
 	systemd-sysv	\
